# RAG-pipeline

./: .gitignore  CHUNK_VS_FILE_PROCESSING.md  DEMO_GUIDE.md  GUI_QUICK_START.md  GUI_README.md  HYBRID_SEARCH_CHANGES.md  JSON_CHUNKING_DOCUMENTATION.md  QDRANT_SETUP.md  README.md  README_MERGED.md  RETRIEVAL_DOCUMENTATION.md  cli.py  example_usage.py  export.py  gui.py  json_maker.py  launch_gui.bat  launch_gui.py  main.py  pyproject.toml  qdrant_view.py  readme.md  repair.py  requirements.txt  retrieval_results.json  run_retrieval.py  script.py  snippets.ipynb  test_json_chunking.py  test_merged_pipeline.py  test_pipeline.py  test_processing_approaches.py  test_retrieval.py
ps04_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rag/: __init__.py  buffered_reader.py  chunker.py  evaluate.py  generate.py  ingestor.py  merged_pipeline.py  parse_json.py  pipeline.py  preprocess.py  qdrant.py  retrieval.py  retrieve.py  sentencer.py  store_embedding.py  tests.ipynb
