[project]
name = "ps04-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-experimental>=0.3.4",
    "pandas>=2.3.2",
    "qdrant-client>=1.15.1",
    "tqdm>=4.67.1",
]
